# jx

./: Cargo.toml  README.md  demo.sh  install.sh
src/: config.rs  dependency.rs  download.rs  install.rs  lock.rs  main.rs  project.rs  registry.rs  resolve.rs  utils.rs
src/commands/: add.rs  build.rs  clean.rs  info.rs  init.rs  install.rs  mod.rs  publish.rs  remove.rs  run.rs  search.rs  test.rs  tree.rs  update.rs  venv.rs
